--- a/WebContent/searchMovieView.xhtml
+++ b/WebContent/searchMovieView.xhtml
@@ -6,7 +6,8 @@
 
 <ui:composition template="./template/mainTemplate.xhtml">
 	<ui:define name="content">
-		<ui:include src="./content/movielist.xhtml"></ui:include>
+		<ui:include src="./content/searchMovie.xhtml"></ui:include>
 	</ui:define>
 </ui:composition>
+
 </html>
