--- a/WebContent/content/movielist.xhtml
+++ b/WebContent/content/movielist.xhtml
@@ -4,22 +4,68 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"
       >
-<h2>映画検索</h2>
-	<h:from id="addMovieForm">
-		<p:growl showDetail="true" autoUpdate="true"/>
-		<p:panelGrid column="2">
-			<p:outputLabel value="タイトル:"/>
-			<p:inputText id="account" value="#{SearchMovieView.title}" />
+<h2>映画編集</h2>
+		<p:growl id="growl" showDetail="true" autoUpdate="true"/>
+	<h:from id="editMovieForm">
+		<p:commandButton id="removeButton" value="選択したユーザを削除" action="#{searchMovieView.removemovie}"
+		update="movieListForm" disabled="#{empty searchMovieView.selectedmovies}">
+		<p:confirm header="Confirmation" message="Are you sure you want to delete the selected users?" icon="ui-icon-info"/>
+		<p:confirmDialog global="true" showEffect="fade" hideEffect="slide">
+		<p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check"/>
+		<p:commandButton value="oh...I made mistake" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close"/>
+		</p:confirmDialog>
+	</p:commandButton>
+	<br/><br/>
+	<p:dataTable id="userList" value="#{searchMovieView.movieModel}" var="movie"
+	editable="true" selection="#{searchMovieView.selectedmovies}"
+	rowKey="#{movie.id}" paginator ="true" paginatorPosition="top"
+	rows="10" rowsPerPageTemplate="5,10,15,30,50"
+	sortMode="multiple" stickyHeader="true">
 
-			<p:outputLabel value="ID:"/>
-			<p:inputText id="id" value="#{SearchMovieView.id}"/>
+		<p:ajax event="contextMenu" update=":movieListForm:removeButton" />
+		<p:ajax event="rowSelect" update=":movieListForm:removeButton" />
+		<p:ajax event="rowUnselect" update=":movieListForm:removeButton" />
+		<p:ajax event="rowSelectCheckbox" update=":movieListForm:removeButton" />
+		<p:ajax event="rowUnselectCheckbox" update=":movieListForm:removeButton" />
+		<p:ajax event="toggleSelect" update=":movieListForm:removeButton" />
+		<p:ajax event="rowEdit" listener="#{editMovieView.onRowEdit}" update=":growl"/>
+		<p:ajax event="rowEditCancel" listener="#{editMovieView.onRowEditCancel}" update="growl"/>
 
-			<p:outputLabel value="Category:"/>
-			<p:inputText id="Category" value="#{searchMovieView.Category}"/>
+		<p:column selectionMode="multiple" style="width:16px;text-align:center"/>
 
-			<p:outputLabel value="Outline:"/>
-			<p:inputText id="outline" value="#{searchMovieView.Outline}"/>
-		</p:panelGrid>
-		<p:messages />
+		<p:column headerText="アカウント" sortBy="#{movie.account}" filterBy="#{movie.account}" filterMatchMode="contains">
+		<p:cellEditor>
+			<f:facet name="output"><p:outputLabel value="#{movie.account}"/></f:facet>
+			<f:facet name="input"><p:inputText value="#{movie.account}"/></f:facet>
+		</p:cellEditor>
+		</p:column>
+
+		<p:column headerText="名前" sortBy="#{movie.name}" filterBy="#{movie.name}" filterMatchMode="contains">
+			<p:cellEditor>
+			<f:facet name="output"><p:outputLabel value="#{movie.name}"/></f:facet>
+			<f:facet name="input"><p:inputText value="#{movie.name}"/></f:facet>
+			</p:cellEditor>
+		</p:column>
+
+		<p:column headerText="e-mail" sortBy="#{movie.email}" filterBy="#{movie.email}" filterMatchMode="contains">
+			<p:cellEditor>
+			<f:facet name="output"><p:outputLabel value="#{movie.email}"/></f:facet>
+			<f:facet name="input"><p:inputText value="#{movie.email}"/></f:facet>
+			</p:cellEditor>
+		</p:column>
+
+		<p:column headerText="管理者権限" sortBy="#{movie.isAdmin}"
+			filterBy="#{user.isAdmin}" filterMatchMode="exact" style="text-align:center">
+			<p:cellEditor>
+				<f:facet name="output"><p:selectBooleanCheckbox value="#{movie.isAdmin}" disabled="true"/></f:facet>
+				<f:facet name="input"><p:selectBooleanCheckbox value="#{movie.isAdmin}" /></f:facet>
+			</p:cellEditor>
+		</p:column>
+
+		<p:column style="width:32px">
+			<p:rowEditor/>
+		</p:column>
+
+	</p:dataTable>
 	</h:from>
 </html>
