--- a/WebContent/content/moviesearch.xhtml
+++ b/WebContent/content/moviesearch.xhtml
@@ -22,16 +22,31 @@
 				completeMethod="#{searchMovieView.completeOutline}"/>
 		</p:panelGrid>
 		<p:messages />
-		<p:commandButton value="映画の検索" actionListener="#{searchMovieView.searchMovie}"
-			update="movieListForm:movieList"/>
+		<p:commandButton value="映画の検索" action="#{searchMovieView.searchMovie}" update="movieListForm:movieList"/>
 	</h:form>
 	<h2>検索結果</h2>
 	<h:form id="movieListForm" onkeypress="if(event.keyCode == 13){return false;}">
-	<p:dataTable id="movieList" value="#{SearchMovieView.movieModel}" var="user"
-	editable="true" selection="#{SearchMovieView.selectedMovies}"
-	rowKey="#{movie.id}" paginator ="true" paginatorPosition="top"
-	rows="10" rowsPerPageTemplate="5,10,15,30,50"
-	sortMode="multiple" stickyHeader="true">
+	<p:commandButton id="removeButton" value="選択した映画をカートに追加" action="#{searchMovieView.addCart}"
+			update="movieListForm" disabled="#{empty searchMovieView.movies}">
+			<p:confirm header="Confirmation" message="Are you sure you want to add the selected movies?" icon="ui-icon-info"/>
+			<p:confirmDialog global="true" showEffect="explode" hideEffect="Blind">
+			<p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check"/>
+			<p:commandButton value="Cancel" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close"/>
+			</p:confirmDialog>
+	</p:commandButton>
+	<p:dataTable id="movieList" value="#{searchMovieView.movieModel}" var="movie"
+		editable="true" selection="#{searchMovieView.movies}"
+		rowKey="#{movie.id}" paginator ="true" paginatorPosition="top"
+		rows="10" rowsPerPageTemplate="5,10,15,30,50"
+		sortMode="multiple">
+
+		<p:ajax event="contextMenu" update=":movieListForm:removeButton" />
+		<p:ajax event="rowSelect" update=":movieListForm:removeButton" />
+		<p:ajax event="rowUnselect" update=":movieListForm:removeButton" />
+		<p:ajax event="rowSelectCheckbox" update=":movieListForm:removeButton" />
+		<p:ajax event="rowUnselectCheckbox" update=":movieListForm:removeButton" />
+		<p:ajax event="toggleSelect" update=":movieListForm:removeButton" />
+
 	<p:column selectionMode="multiple" style="width:16px;text-align:center"/>
 
 		<p:column headerText="タイトル" sortBy="#{movie.title}" filterBy="#{movie.title}" filterMatchMode="contains">
@@ -53,10 +68,6 @@
 			<f:facet name="output"><p:outputLabel value="#{movie.outline}"/></f:facet>
 			<f:facet name="input"><p:inputText value="#{movie.outline}"/></f:facet>
 			</p:cellEditor>
-		</p:column>
-
-		<p:column style="width:32px">
-			<p:rowEditor/>
 		</p:column>
 
 	</p:dataTable>
